--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -1,11 +1,11 @@
 .calendar-container {
 	flex: 1;
-	padding: 20px;
+	padding: 10px;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	gap: 16px;
+	gap: 10px;
 	align-content: start;
-	background-color: white;
+	background-color: #f9f9f9;
 	overflow-y: auto;
 	height: 100%;
 	box-sizing: border-box;
@@ -15,7 +15,12 @@
 @media (max-width: 768px) {
 	.calendar-container {
 		padding: 10px;
-		gap: 10px;
+	}
+}
+
+@media (max-width: 530px) {
+	.calendar-container {
+		grid-template-columns: repeat(auto-fit, 100%);
 	}
 }
 
@@ -25,7 +30,7 @@
 	border-radius: 6px;
 	background-color: white;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-	min-width: 0; /* Prevent grid item overflow */
+	min-width: 0;
 }
 
 .calendar-month h3 {
