--- a/src/index.css
+++ b/src/index.css
@@ -27,16 +27,6 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
-}
-
-h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
-}
-
 button {
 	border-radius: 8px;
 	border: 1px solid transparent;
